--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html,
 body {
     font-family: 'Poppins', sans-serif;
 }
-.header {
+header {
     width: 100%;
     height: 64px;
     box-sizing: border-box;
@@ -15,10 +15,25 @@ body {
     border-bottom-color: rgb(237, 239, 244);
     border-bottom-width: 1px;
     border-bottom-style: solid;
+    padding: 0 16px;
+}
+nav {
+    height: 100%;
+}
+ul {
+    height: 100%;
+    list-style: none;
+    font-size: 12px;
+    font-weight: 600;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    align-items: center;
 }
 li {
     color: #282e3e;
     line-height: 20px;
+    margin: 0 12px;
 }
 h2 {
     color: #303545;
@@ -32,25 +47,25 @@ a:hover {
 .btn {
     font-weight: 600;
     font-size: 12px;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 6px 16px;
+    height: 50%;
+    border: 0;
+    margin: 5px;
 }
 .btn--login-in {
     background-color: white;
+    color: #586380;
 }
 .btn--login-in:hover {
     background-color: #4255ff;
-}
-.btn--login-in a {
-    color: #586380;
-}
-.btn--login-in a:hover {
     color: white;
 }
 .btn--sign-up {
-    background-color: #ffcd1f; 
+    background-color: #ffcd1f;
+    color: #282e3e;
 }
 .btn--sign-up:hover {
     background-color: #ffdc62;
-}
-.btn--sign-up a {
-    color: #282e3e;
 }
