--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 html,
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 header {
     width: 100%;
@@ -16,6 +16,9 @@ header {
     border-bottom-width: 1px;
     border-bottom-style: solid;
     padding: 0 16px;
+        /* z-index: 300;
+        position: fixed;
+        top: 0; */
 }
 nav {
     height: 100%;
@@ -23,7 +26,7 @@ nav {
 ul {
     height: 100%;
     list-style: none;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 600;
     display: flex;
     margin: 0;
@@ -46,7 +49,7 @@ a:hover {
 }
 .btn {
     font-weight: 600;
-    font-size: 12px;
+    font-size: 14px;
     align-items: center;
     box-sizing: border-box;
     padding: 6px 16px;
